[gd_scene load_steps=2 format=3 uid="uid://d0mgis7f2smcc"]

[ext_resource type="Script" path="res://Scenes/Menu/Buttons/slider.gd" id="1_6adiv"]

[node name="VBoxContainer" type="VBoxContainer"]
offset_right = 34.0
offset_bottom = 50.0
script = ExtResource("1_6adiv")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="lblTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "Title
"

[node name="SliderContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="lblSlider" type="Label" parent="SliderContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"

[connection signal="value_changed" from="SliderContainer/HSlider" to="." method="_on_h_slider_value_changed"]
